feat: 판다마켓 프로젝트를 타입스크립트로 전환(#8)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "jsx": "react-jsx",
       "baseUrl": "./src",
       "paths": {
-        "@/*": ["*"],
+        "@/*": ["/*"],
         "@/components/*": ["components/*"],
         "@/assets/*": ["assets/*"],
         "@/styles/*": ["styles/*"],
@@ -25,6 +25,6 @@
         "@/utils/*": ["utils/*"]
       }
     },
-    "include": ["src"],
+    "include": ["src", "vite-env.d.ts"],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
